--- a/inputvalue.html
+++ b/inputvalue.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    zjn,s
+    <script>
+        function abes(){
+            let x=document.getElementById("aaa");
+            let y=x.value;
+            document.getElementById("adi").innerHTML=y;
+        }
+    </script>
 </body>
 </html>
