--- a/callback_hell.html
+++ b/callback_hell.html
@@ -7,14 +7,18 @@
 </head>
 <body>
     <script>
-        function getData(dataid){
+        function getData(dataid,getnextdata){
             setTimeout(()=>{
                 console.log("data",dataid);
             },2000);
         }
-        getData(1);
-        getData(2);
-        getData(3);
+        getData(1,()=>{
+            getData(2,()=>{
+                getData(3,()=>{
+                    getData(4);
+                });
+            });
+        });
     </script>
 </body>
 </html>
