--- a/abcd.html
+++ b/abcd.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <script>
-       const mypromise = new Promise((resolve,reject)=>{ })
+       const mypromise = new Promise((resolve,reject)=>{
        const password="piyush@1822";
          if(password.length>=8)
          {
@@ -13,6 +13,12 @@
          else{
           reject("password is shorter in length");
          }
+    })
+    mypromise.then((message)=>{
+      console.log("this is in then "+message);
+    }).catch((message)=>{
+      console.log("this is in catch "+message);
+    })
 
     </script>
 </body>
